# fork-intelligence

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PLANS.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
docs/: API.md  DECISIONS.md  DEPLOYMENT.md  DESIGN_CONTRACT.md  FIDELITY.md  HANDOFF.md  METHODOLOGY.md  OPERATIONS.md  ORCHESTRATION.md  PERFORMANCE.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md  STATUS.md  (+1 more)
services/platform/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/platform/migrations/: env.py
services/platform/migrations/versions/: 20260713_0001_create_durable_platform_schema.py  20260722_0002_persist_credential_mode_and_branch_plan_provenance.py
services/platform/src/fork_intelligence/: __init__.py  config.py  db.py  errors.py  models.py  schemas.py
services/platform/src/fork_intelligence/adapters/: __init__.py  ai.py  credential_router.py  git.py  github.py  github_graphql.py
services/platform/src/fork_intelligence/api/: deps.py  main.py  routes.py
services/platform/src/fork_intelligence/domain/: __init__.py  classification.py  clustering.py  comparisons.py  exports.py  files.py  repository_input.py  scoring.py
services/platform/src/fork_intelligence/services/: __init__.py  events.py  persistence.py  pipeline.py
services/platform/src/fork_intelligence/tools/: __init__.py  export_openapi.py  real_smoke.py
services/platform/src/fork_intelligence/worker/: __init__.py  broker.py  tasks.py
(+94 files in other folders)
