[project]
name = "fork-intelligence-platform"
version = "0.1.0"
description = "Evidence-backed GitHub fork intelligence API and worker"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16,<2",
  "dramatiq[redis]>=1.18,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "redis>=5,<7",
  "sqlalchemy>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
fork-intelligence-api = "fork_intelligence.api.main:run"
fork-intelligence-smoke = "fork_intelligence.tools.real_smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fork_intelligence"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "../../tests/platform"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["fork_intelligence"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["../../tests/platform"]
addopts = "--strict-config --strict-markers -q"
markers = [
  "postgres: requires an explicitly configured PostgreSQL test database",
  "network: opt-in live network test",
]
